index page, css, book images

--- a/Project/src/main/webapp/login.html
+++ b/Project/src/main/webapp/login.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Login</title>
+<link rel="stylesheet" href="css/login.css">
+<link rel="shortcut icon" href="./icons/favico.png" type=image/x-icon>
 </head>
 
 <body>
