--- a/Project/src/main/webapp/registration.html
+++ b/Project/src/main/webapp/registration.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Registrazione</title>
+	<link rel="stylesheet" href="./css/registration.css">
 </head>
 
 <body>
