reg-validation.js and registration.html

--- a/Project/src/main/webapp/registration.html
+++ b/Project/src/main/webapp/registration.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Registrazione</title>
 	<link rel="stylesheet" href="./css/registration.css">
+	<link rel="shortcut icon" href="./icons/favico.jpg" type="image/x-icon">
+	<script src="./script/reg-validation.js" defer></script>
 </head>
 
 <body>
