--- a/Project/src/main/webapp/registration.html
+++ b/Project/src/main/webapp/registration.html
@@ -16,47 +16,47 @@
 		<form  class="form" id="form" method="post" action="RegistrationServlet" >
 			<div class="form-control">
 				<label for="username">Username</label>
-				<input type="text" placeholder="" id="username" name="username"/>
+				<input type="text" placeholder="" id="username" name="username" onchange="validateFormElem(this, userPattern, document.getElementById('errorUsername'), usernameErrorMessage)"/>
 				<small id="errorUsername">Error message</small>
 			</div>
 			<div class="form-control">
 				<label for="email">Email</label>
-				<input type="email" placeholder="" id="email" name="email"/>
+				<input type="email" placeholder="" id="email" name="email" onchange="validateFormElem(this, emailPattern, document.getElementById('errorEmail'), emailErrorMessage)"/>
 				<small id="errorEmail" style="font-size:0.8rem">Error message</small>
 			</div>
 			<div class="form-control">
 				<label for="password">Password</label>
-				<input type="password" placeholder="" id="password" name="password"/>
+				<input type="password" placeholder="" id="password" name="password" onchange="validateFormElem(this, userPattern, document.getElementById('errorPassword'), usernameErrorMessage)"/>
 				<small id="errorPassword">Error message</small>
 			</div>
 			<div class="form-control">
 				<label for="name">Nome</label>
-				<input type="text" placeholder="" id="name" name="name"/>
+				<input type="text" placeholder="" id="name" name="name" onchange="validateFormElem(this, namePattern, document.getElementById('errorName'), nameErrorMessage)"/>
 				<small id="errorName">Error message</small>
 			</div>
 			<div class="form-control">
 				<label for="surname">Cognome</label>
-				<input type="text" placeholder="" id="surname" name="surname"/>
+				<input type="text" placeholder="" id="surname" name="surname" onchange="validateFormElem(this, namePattern, document.getElementById('errorSurname'), nameErrorMessage)"/>
 				<small id="errorSurname">Error message</small>
 			</div>
 			<div class="form-control">
 				<label for="address">Via</label>
-				<input type="text" placeholder="" id="address" name="address"/>
+				<input type="text" placeholder="" id="address" name="address" onchange="validateFormElem(this, namePattern, document.getElementById('errorVia'), nameErrorMessage)"/>
 				<small id="errorVia"></small>
 			</div>
 			<div class="form-control">
 				<label for="address2">Civico</label>
-				<input type="number" placeholder="" id="address2" name="address2"/>
+				<input type="number" placeholder="" id="address2" name="address2" onchange="validateFormElem(this, civicoPattern, document.getElementById('errorCivico'), civicoErrorMessage)"/>
 				<small id="errorCivico">Error message</small>
 			</div>
 			<div class="form-control">
 				<label for="address3">Città</label>
-				<input type="text" placeholder="" id="address3" name="address3"/>
+				<input type="text" placeholder="" id="address3" name="address3" onchange="validateFormElem(this, namePattern, document.getElementById('errorCitta'), nameErrorMessage)"/>
 				<small id="errorCitta">Error message</small>
 			</div>
 			<div class="form-control">
 				<label for="address">CAP</label>
-				<input type="number" placeholder="" id="cap" name="cap" min="00001" max="99999"/>
+				<input type="number" placeholder="" id="cap" name="cap" min="00001" max="99999" onchange="validateFormElem(this, capPattern, document.getElementById('errorCap'), capErrorMessage)"/>
 				<small id="errorCap">Error message</small>
 			</div>
 			<button type="submit" form="form">Registrati</button>
