Responsive CSS e Regex Password

--- a/Project/src/main/webapp/registration.html
+++ b/Project/src/main/webapp/registration.html
@@ -26,8 +26,8 @@
 			</div>
 			<div class="form-control">
 				<label for="password">Password</label>
-				<input type="password" placeholder="" id="password" name="password" onchange="validateFormElem(this, userPattern, document.getElementById('errorPassword'), usernameErrorMessage)"/>
-				<small id="errorPassword">Error message</small>
+				<input type="password" placeholder="" id="password" name="password" onchange="validateFormElem(this, passwPattern, document.getElementById('errorPassword'), passwErrorMessage)"/>
+				<small id="errorPassword" style="bottom: -12px;">Error message</small>
 			</div>
 			<div class="form-control">
 				<label for="name">Nome</label>
